# Generative-AI-Projects

./: .gitignore  README.md
Chatbot/: ChatBot.ipynb
Image Generator/: project_1.ipynb
Resume Analyzer and Job Matcher/: Resume Analyzer and Job matcher.ipynb  job.txt  resume.txt  resume_1.docx
WebScraper QA chatbot/: .env.example  Web Scraper QA ChatBot.ipynb
end-to-end AI Agent/: dockerfile  langchain-agent.ipynb  main.py  pyproject.toml  requirements.txt
