[project]
name = "end-to-end-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.11.2",
    "duckduckgo-search>=8.1.1",
    "groq>=0.37.1",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.10",
    "langchainhub>=0.1.21",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]
